# fastapi_ddd_jwt_auth_with_mongodb

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/application/services/: auth_service.py
src/core/: config.py  database.py  dependencies.py  http.py
src/domain/entities/: user.py
src/domain/repositories/: user_repository.py
src/infrastructure/database/: user_motor_repository.py
src/infrastructure/enums/: token.py
src/infrastructure/security/: jwt_handler.py  password_hasher.py
src/presentation/api/: auth.py
src/presentation/models/: auth.py  models.py
src/presentation/schemas/: auth.py
